--- a/backend/deploy/docker-swarm.yml
+++ b/backend/deploy/docker-swarm.yml
@@ -4,8 +4,12 @@ services:
     command:
       - "--certificatesresolvers.letsencrypt.acme.email=${ACME_EMAIL}"
     ports:
-      - "80:80"
-      - "443:443"
+      - target: 80
+        published: 80
+        mode: host
+      - target: 443
+        published: 443
+        mode: host
     volumes:
       - ./traefik.yml:/etc/traefik/traefik.yml:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
