--- a/frontend/customer/Dockerfile
+++ b/frontend/customer/Dockerfile
@@ -2,10 +2,10 @@ FROM node:22-alpine
 
 WORKDIR /app
 
-COPY dist/sassycrab ./dist/sassycrab
+COPY dist/customer ./dist/customer
 
 ENV PORT=4000
 
 EXPOSE 4000
 
-CMD ["node", "dist/sassycrab/server/server.mjs"]
+CMD ["node", "dist/customer/server/server.mjs"]
