--- a/frontend/legacy/package.json
+++ b/frontend/legacy/package.json
@@ -10,21 +10,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.0.5",
+    "@angular/animations": "^21.1.2",
     "@angular/cdk": "^19.0.4",
-    "@angular/common": "^19.0.5",
-    "@angular/compiler": "^19.0.5",
-    "@angular/core": "^19.0.5",
-    "@angular/forms": "^19.0.5",
-    "@angular/platform-browser": "^19.0.5",
-    "@angular/platform-browser-dynamic": "^19.0.5",
-    "@angular/router": "^19.0.5",
+    "@angular/common": "^21.1.2",
+    "@angular/compiler": "^21.1.2",
+    "@angular/core": "^21.1.2",
+    "@angular/forms": "^21.1.2",
+    "@angular/platform-browser": "^21.1.2",
+    "@angular/platform-browser-dynamic": "^21.1.2",
+    "@angular/router": "^21.1.2",
     "currency.js": "2.0.4",
     "material-icons": "1.13.12",
     "ngx-colors": "3.6.0",
-    "ngx-infinite-scroll": "19.0.0",
-    "ngx-quill": "27.0.0",
-    "nxt-sortablejs": "19.0.2",
+    "ngx-infinite-scroll": "21",
+    "ngx-quill": "^30.0.1",
+    "nxt-sortablejs": "21",
     "quill": "2.0.3",
     "rxjs": "~7.8.0",
     "sortablejs": "1.15.6",
@@ -33,9 +33,9 @@
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.6",
-    "@angular/cli": "^19.0.6",
-    "@angular/compiler-cli": "^19.0.5",
+    "@angular-devkit/build-angular": "^21.1.2",
+    "@angular/cli": "^21.1.2",
+    "@angular/compiler-cli": "^21.1.2",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.3",
@@ -43,8 +43,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "ng-packagr": "^19.0.0",
+    "ng-packagr": "^21.1.0",
     "prettier": "3.6.2",
-    "typescript": "~5.6.3"
+    "typescript": "~5.9.3"
   }
 }
