--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,9 +1,16 @@
 FROM eclipse-temurin:25-jre-alpine
 
+RUN addgroup -g 1000 appgroup && adduser -u 1000 -G appgroup -D appuser
+
 WORKDIR /app
 
-COPY apps/api/build/libs/app.jar app.jar
+COPY --chown=appuser:appgroup apps/api/build/libs/app.jar app.jar
+
+USER appuser
 
 EXPOSE 8080
+
+HEALTHCHECK --interval=30s --timeout=5s --start-period=60s --retries=3 \
+  CMD wget --no-verbose --tries=1 --spider http://localhost:8080/actuator/health || exit 1
 
 ENTRYPOINT ["java", "-jar", "app.jar"]
