--- a/frontend/management/Dockerfile
+++ b/frontend/management/Dockerfile
@@ -1,15 +1,22 @@
-FROM node:22-alpine
+FROM node:24-alpine
+
+RUN addgroup -g 1000 appgroup && adduser -u 1000 -G appgroup -D appuser
 
 WORKDIR /app
 
-COPY dist/management ./dist/management
-COPY server.mjs ./server.mjs
-COPY package.json ./package.json
+COPY --chown=appuser:appgroup dist/management ./dist/management
+COPY --chown=appuser:appgroup server.mjs ./server.mjs
+COPY --chown=appuser:appgroup package.json ./package.json
 
-RUN npm install --omit=dev --ignore-scripts
+RUN npm install --omit=dev --ignore-scripts && chown -R appuser:appgroup node_modules
+
+USER appuser
 
 ENV PORT=4200
 
 EXPOSE 4200
+
+HEALTHCHECK --interval=30s --timeout=5s --start-period=10s --retries=3 \
+  CMD wget --no-verbose --tries=1 --spider http://localhost:4200 || exit 1
 
 CMD ["node", "server.mjs"]
