Fixed customer frontend

--- a/frontend/customer/angular.json
+++ b/frontend/customer/angular.json
@@ -35,6 +35,12 @@
 					},
 					"configurations": {
 						"production": {
+							"fileReplacements": [
+								{
+									"replace": "src/environments/index.ts",
+									"with": "src/environments/prod.ts"
+								}
+							],
 							"budgets": [
 								{
 									"type": "initial",
