--- a/frontend/customer/tsconfig.json
+++ b/frontend/customer/tsconfig.json
@@ -3,6 +3,9 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "paths": {
+      "@kicherkrabbe/shared": ["../packages/shared/src/index.ts"]
+    },
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
