--- a/frontend/customer/package.json
+++ b/frontend/customer/package.json
@@ -23,7 +23,6 @@
   },
   "private": true,
   "dependencies": {
-    "@kicherkrabbe/shared": "1.0.0",
     "@angular/animations": "^21.1.2",
     "@angular/common": "^21.1.2",
     "@angular/compiler": "^21.1.2",
@@ -33,6 +32,7 @@
     "@angular/platform-server": "^21.1.2",
     "@angular/router": "^21.1.2",
     "@angular/ssr": "^21.1.2",
+    "@kicherkrabbe/shared": "workspace:*",
     "@primeuix/themes": "^2.0.3",
     "express": "^5.1.0",
     "primeng": "^21.1.1",
