--- a/frontend/management/package.json
+++ b/frontend/management/package.json
@@ -11,9 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@kicherkrabbe/shared": "1.0.0",
     "@angular/animations": "^21.1.2",
-    "express": "^5.1.0",
     "@angular/cdk": "^19.0.4",
     "@angular/common": "^21.1.2",
     "@angular/compiler": "^21.1.2",
@@ -22,7 +20,9 @@
     "@angular/platform-browser": "^21.1.2",
     "@angular/platform-browser-dynamic": "^21.1.2",
     "@angular/router": "^21.1.2",
+    "@kicherkrabbe/shared": "workspace:*",
     "currency.js": "2.0.4",
+    "express": "^5.1.0",
     "material-icons": "1.13.12",
     "ngx-colors": "3.6.0",
     "ngx-infinite-scroll": "21",
@@ -37,11 +37,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^21.1.2",
-    "@types/express": "^5.0.3",
-    "@types/node": "^22.15.21",
     "@angular/cli": "^21.1.2",
     "@angular/compiler-cli": "^21.1.2",
+    "@types/express": "^5.0.3",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^22.15.21",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.3",
     "karma-chrome-launcher": "~3.2.0",
