--- a/frontend/packages/shared/package.json
+++ b/frontend/packages/shared/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "./src/index.ts",
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch"
@@ -13,7 +12,7 @@
     "rxjs": ">=7.0.0"
   },
   "devDependencies": {
-    "typescript": "~5.9.3",
-    "rxjs": "~7.8.1"
+    "rxjs": "~7.8.1",
+    "typescript": "~5.9.3"
   }
 }
