--- a/frontend/management/Dockerfile
+++ b/frontend/management/Dockerfile
@@ -3,11 +3,6 @@ FROM node:24-alpine
 WORKDIR /app
 
 COPY --chown=node:node dist/management ./dist/management
-COPY --chown=node:node server.mjs ./server.mjs
-COPY --chown=node:node package.json ./package.json
-
-RUN yarn install --production --frozen-lockfile --ignore-scripts
-RUN chown -R node:node node_modules
 
 USER node
 
@@ -18,4 +13,4 @@ EXPOSE 4200
 HEALTHCHECK --interval=30s --timeout=5s --start-period=10s --retries=3 \
   CMD wget --no-verbose --tries=1 --spider http://localhost:4200 || exit 1
 
-CMD ["node", "server.mjs"]
+CMD ["node", "dist/management/server.mjs"]
