--- a/frontend/management/package.json
+++ b/frontend/management/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build && yarn build:server",
+    "build:server": "esbuild server.mjs --bundle --platform=node --format=esm --outfile=dist/management/server.mjs",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:express": "node server.mjs"
@@ -42,6 +43,7 @@
     "@types/express": "^5.0.3",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^22.15.21",
+    "esbuild": "^0.27.2",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.3",
     "karma-chrome-launcher": "~3.2.0",
