--- a/frontend/customer/package.json
+++ b/frontend/customer/package.json
@@ -35,7 +35,9 @@
     "@kicherkrabbe/shared": "workspace:*",
     "@primeuix/themes": "^2.0.3",
     "express": "^5.1.0",
+    "ngx-quill": "^30.0.1",
     "primeng": "^21.1.1",
+    "quill": "^2.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
