Deploying customer app on kicherkrabbe.com

--- a/deploy/docker-swarm.yml
+++ b/deploy/docker-swarm.yml
@@ -139,11 +139,18 @@ services:
     deploy:
       labels:
         - "traefik.enable=true"
-        - "traefik.http.routers.customer.rule=Host(`customer.${DOMAIN}`)"
+        - "traefik.http.routers.customer.rule=Host(`${DOMAIN}`)"
         - "traefik.http.routers.customer.entrypoints=websecure"
         - "traefik.http.routers.customer.tls.certresolver=letsencrypt"
         - "traefik.http.routers.customer.middlewares=security-headers@swarm"
         - "traefik.http.services.customer.loadbalancer.server.port=4000"
+        - "traefik.http.routers.customer-www.rule=Host(`www.${DOMAIN}`)"
+        - "traefik.http.routers.customer-www.entrypoints=websecure"
+        - "traefik.http.routers.customer-www.tls.certresolver=letsencrypt"
+        - "traefik.http.routers.customer-www.middlewares=security-headers@swarm,www-redirect"
+        - "traefik.http.middlewares.www-redirect.redirectregex.regex=^https://www\\.(.+)"
+        - "traefik.http.middlewares.www-redirect.redirectregex.replacement=https://$${1}"
+        - "traefik.http.middlewares.www-redirect.redirectregex.permanent=true"
       update_config:
         parallelism: 1
         delay: 10s
@@ -169,18 +176,11 @@ services:
         - "traefik.http.middlewares.security-headers.headers.browserXssFilter=true"
         - "traefik.http.middlewares.security-headers.headers.referrerPolicy=strict-origin-when-cross-origin"
         - "traefik.http.middlewares.security-headers.headers.permissionsPolicy=geolocation=(), microphone=(), camera=()"
-        - "traefik.http.routers.management.rule=Host(`${DOMAIN}`)"
+        - "traefik.http.routers.management.rule=Host(`manage.${DOMAIN}`)"
         - "traefik.http.routers.management.entrypoints=websecure"
         - "traefik.http.routers.management.tls.certresolver=letsencrypt"
         - "traefik.http.routers.management.middlewares=security-headers@swarm"
         - "traefik.http.services.management.loadbalancer.server.port=4200"
-        - "traefik.http.routers.management-www.rule=Host(`www.${DOMAIN}`)"
-        - "traefik.http.routers.management-www.entrypoints=websecure"
-        - "traefik.http.routers.management-www.tls.certresolver=letsencrypt"
-        - "traefik.http.routers.management-www.middlewares=security-headers@swarm,www-redirect"
-        - "traefik.http.middlewares.www-redirect.redirectregex.regex=^https://www\\.(.+)"
-        - "traefik.http.middlewares.www-redirect.redirectregex.replacement=https://$${1}"
-        - "traefik.http.middlewares.www-redirect.redirectregex.permanent=true"
       update_config:
         parallelism: 1
         delay: 10s
