--- a/deploy/traefik.yml
+++ b/deploy/traefik.yml
@@ -6,6 +6,22 @@ providers:
     exposedByDefault: false
     endpoint: unix:///var/run/docker.sock
     network: traefik-public
+  file:
+    filename: /etc/traefik/traefik.yml
+    watch: false
+
+http:
+  middlewares:
+    security-headers:
+      headers:
+        stsSeconds: 31536000
+        stsIncludeSubdomains: true
+        stsPreload: true
+        contentTypeNosniff: true
+        frameDeny: true
+        browserXssFilter: true
+        referrerPolicy: strict-origin-when-cross-origin
+        permissionsPolicy: "geolocation=(), microphone=(), camera=()"
 
 entryPoints:
   web:
