--- a/deploy/docker-swarm.yml
+++ b/deploy/docker-swarm.yml
@@ -12,6 +12,7 @@ services:
         mode: host
     volumes:
       - ./traefik.yml:/etc/traefik/traefik.yml:ro
+      - ./traefik-dynamic.yml:/etc/traefik/dynamic.yml:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
       - traefik-certificates:/letsencrypt
     networks:
