--- a/deploy/traefik.yml
+++ b/deploy/traefik.yml
@@ -7,21 +7,8 @@ providers:
     endpoint: unix:///var/run/docker.sock
     network: traefik-public
   file:
-    filename: /etc/traefik/traefik.yml
+    filename: /etc/traefik/dynamic.yml
     watch: false
-
-http:
-  middlewares:
-    security-headers:
-      headers:
-        stsSeconds: 31536000
-        stsIncludeSubdomains: true
-        stsPreload: true
-        contentTypeNosniff: true
-        frameDeny: true
-        browserXssFilter: true
-        referrerPolicy: strict-origin-when-cross-origin
-        permissionsPolicy: "geolocation=(), microphone=(), camera=()"
 
 entryPoints:
   web:
