--- a/backend/features/assets/assets-starter/build.gradle
+++ b/backend/features/assets/assets-starter/build.gradle
@@ -6,4 +6,5 @@ dependencies {
     api project(':features:assets:assets-core')
 
     implementation 'org.springframework:spring-web'
+    implementation 'dev.matrixlab:webp4j:1.4.0'
 }
