Nicer msg deserialization

--- a/backend/libs/eventsourcing/eventsourcing-example/build.gradle
+++ b/backend/libs/eventsourcing/eventsourcing-example/build.gradle
@@ -6,5 +6,7 @@ dependencies {
     implementation project(':libs:eventsourcing:eventsourcing-starter')
 
     testImplementation project(':libs:persistence:persistence-testing')
+    testImplementation project(':libs:eventsourcing:eventsourcing-testing')
+    testImplementation project(':libs:messaging:messaging-testing')
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
