--- a/deploy/.env.example
+++ b/deploy/.env.example
@@ -12,5 +12,8 @@ MONGO_APP_PASSWORD=change-me-app-password
 RABBITMQ_USER=kicherkrabbe
 RABBITMQ_PASSWORD=change-me-rabbitmq-password
 
+# Asset storage limit in bytes (0 = unlimited)
+ASSETS_STORAGE_LIMIT=0
+
 # Application image (after building and pushing)
 APP_IMAGE=your-registry/kicherkrabbe-server:latest
