--- a/deploy/traefik-dynamic.yml
+++ b/deploy/traefik-dynamic.yml
@@ -9,7 +9,7 @@ http:
         browserXssFilter: true
         referrerPolicy: strict-origin-when-cross-origin
         permissionsPolicy: "geolocation=(), microphone=(), camera=()"
-        contentSecurityPolicy: "default-src 'none'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; font-src 'self' data:; img-src 'self' data: https://api.kicherkrabbe.com; connect-src 'self' https://api.kicherkrabbe.com; form-action 'self'; frame-ancestors 'none'; base-uri 'self'; upgrade-insecure-requests"
+        contentSecurityPolicy: "default-src 'none'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; font-src 'self' data:; img-src 'self' data: blob: https://api.kicherkrabbe.com; connect-src 'self' https://api.kicherkrabbe.com; form-action 'self'; frame-ancestors 'none'; base-uri 'self'; upgrade-insecure-requests"
     compress:
       compress:
         minResponseBodyBytes: 1024
